# US-Reporting_v1.0

./: .eslintrc  .gitignore  Makefile  README.md  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: initial_migration.py
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  customers.py  invoices.py  products.py  quotations.py  settings.py  users.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docs/api/: api_specification.md
docs/design/: 01_system_overview.md  02_business_requirements.md  03_database_design.md  04_functional_requirements.md  05_business_flow.md  06_technical_requirements.md  07_security_design.md  08_api_design.md  system_design.md
src/api/controllers/: auth.controller.js
src/api/middlewares/: auth.middleware.js
src/utils/: email.js  errors.js  pdf.js
